--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </div>
     </div>
 </main>
-<audio src="/sounds/key_q.mp3" id="KeyQ"></audio>
-<audio src="/sounds/key_w.mp3" id="KeyW"></audio>
-<audio src="/sounds/key_e.mp3" id="KeyE"></audio>
-<audio src="/sounds/key_a.mp3" id="KeyA"></audio>
-<audio src="/sounds/key_s.mp3" id="KeyS"></audio>
-<audio src="/sounds/key_d.mp3" id="KeyD"></audio>
+<audio src="sounds/key_q.mp3" id="KeyQ"></audio>
+<audio src="sounds/key_w.mp3" id="KeyW"></audio>
+<audio src="sounds/key_e.mp3" id="KeyE"></audio>
+<audio src="sounds/key_a.mp3" id="KeyA"></audio>
+<audio src="sounds/key_s.mp3" id="KeyS"></audio>
+<audio src="sounds/key_d.mp3" id="KeyD"></audio>
 <script src="script.js"></script>
 </body>
 </html>
