--- a/index.html
+++ b/index.html
@@ -10,26 +10,14 @@
 <main>
     <div class="panel">
         <div class="row">
-            <div class="key letter_q">
-                <p class="letter">q</p>
-            </div>
-            <div class="key letter_w">
-                <p class="letter">w</p>
-            </div>
-            <div class="key letter_e">
-                <p class="letter">e</p>
-            </div>
+            <div class="key letter_q" data-key="q">q</div>
+            <div class="key letter_w" data-key="w">w</div>
+            <div class="key letter_e" data-key="e">e</div>
         </div>
         <div class="row">
-            <div class="key letter_a">
-                <p class="letter">a</p>
-            </div>
-            <div class="key letter_s">
-                <p class="letter">s</p>
-            </div>
-            <div class="key letter_d">
-                <p class="letter">d</p>
-            </div>
+            <div class="key letter_a" data-key="a">a</div>
+            <div class="key letter_s" data-key="s">s</div>
+            <div class="key letter_d" data-key="d">d</div>
         </div>
     </div>
 </main>
